tests/errors/e_fstring5.pyx
# mode: error

def f(value):
    f"xx {value]} yy"
    
_ERRORS = """
4:15: Unmatched ']'
"""